<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.multimedio.jairo.certamen2.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo_string"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="76dp"
        android:id="@+id/Titulo" />

    <EditText
        android:text="@string/nombre_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="132dp"
        android:id="@+id/Nombre" />

    <Button
        android:text="@string/Inicio_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="89dp"
        android:id="@+id/Inicio"
        android:layout_below="@+id/Nombre"
        android:layout_alignStart="@+id/Titulo" />


</RelativeLayout>
